Input homepage content

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <h1>Howdy, I'm M.M. Lawry</h1>
+      <h2>Front-end Developer || Austin, TX</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
