--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/630ef5f310.js"
       crossorigin="anonymous"
@@ -30,10 +31,21 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="hero">
-      <h1>Howdy, I'm M.M. Lawry</h1>
-      <h2>Front-end Developer || Austin, TX</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="/images/portfolio mug 1.png" class="img-fluid" />
+        </div>
+        <div class="col-sm-6 hero">
+          <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
+          <h2>Front-end Developer || Austin, TX</h2>
+          <div class="mt-5">
+            <a href="#" class="btn btn-branding" title="contact MM Lawry"
+              >Contact me</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
