Site expanded, additional styling, photos, and media queries added.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/portfolio mug 1.png" class="img-fluid" />
+          <img src="/images/portfolio mug 3.png" class="img-fluid mug" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
@@ -44,6 +44,25 @@
               >Contact me</a
             >
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xx">
+          <h2 class="project-title">Javascript Weather App</h2>
+          <img
+            src="/images/fidelity.png"
+            class="img-fluid mb-5"
+            id="project-1"
+          />
+          <p class="mb-5 project-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+            quas beatae totam, neque harum quos eum quam nulla. Vero facilis
+            incidunt repellendus cupiditate sit illo nemo assumenda dolorem
+            sequi esse.
+          </p>
+          <a href="" class="btn btn-launch-button text-center">Learn more</a>
         </div>
       </div>
     </div>
