Added placeholder, updated hero

--- a/index.html
+++ b/index.html
@@ -68,7 +68,28 @@
       <div class="row">
         <div class="col">
           <h2 class="project-title">Javascript Weather App</h2>
-          <img src="/images/tejas.png" class="img-fluid mb-5" id="project-1" />
+          <img
+            src="/images/tejas 2.png"
+            class="img-fluid mb-5"
+            id="project-1"
+          />
+          <p class="mb-5 project-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+            quas beatae totam, neque harum quos eum quam nulla. Vero facilis
+            incidunt repellendus cupiditate sit illo nemo assumenda dolorem
+            sequi esse.
+          </p>
+          <a href="" class="btn btn-launch-button text-center">Learn more</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="project-title">Placeholder Landing Page</h2>
+          <img
+            src="/images/ethereum.png"
+            class="img-fluid mb-5"
+            id="project-1"
+          />
           <p class="mb-5 project-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
             quas beatae totam, neque harum quos eum quam nulla. Vero facilis
