--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-md-4">
           <h2 class="project-title">Fidelity Landing Page</h2>
           <img
             src="/images/fidelity.png"
@@ -64,9 +64,9 @@
           </p>
           <a href="" class="btn btn-launch-button text-center">Learn more</a>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
+        <!-- </div> -->
+        <!-- <div class="row"> -->
+        <div class="col-md-4">
           <h2 class="project-title">Javascript Weather App</h2>
           <img
             src="/images/tejas 2.png"
@@ -81,9 +81,9 @@
           </p>
           <a href="" class="btn btn-launch-button text-center">Learn more</a>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
+        <!-- </div> -->
+        <!-- <div class="row"> -->
+        <div class="col-md-4">
           <h2 class="project-title">Placeholder Landing Page</h2>
           <img
             src="/images/ethereum.png"
