--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <title>Meet MML || Front-end Developer in Austin</title>
   </head>
   <body>
     <div class="container">
