--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5">Learn more</a>
+            <a href="" class="btn btn-launch-button mb-5">View Project</a>
           </div>
         </div>
         <!-- </div> -->
@@ -82,7 +82,7 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5">Learn more</a>
+            <a href="" class="btn btn-launch-button mb-5">View project</a>
           </div>
         </div>
         <!-- </div> -->
@@ -101,7 +101,7 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5">Learn more</a>
+            <a href="" class="btn btn-launch-button mb-5">View project</a>
           </div>
         </div>
       </div>
