--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5">View project</a>
+            <a
+              href="https://sage-swan-c8d97c.netlify.app/"
+              class="btn btn-launch-button mb-5"
+              target="_blank"
+              >View project</a
+            >
           </div>
         </div>
         <!-- </div> -->
@@ -82,7 +87,9 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5">View project</a>
+            <a href="" class="btn btn-launch-button mb-5" target="_blank"
+              >View project</a
+            >
           </div>
         </div>
         <!-- </div> -->
@@ -101,7 +108,12 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5">View project</a>
+            <a
+              href="https://vocal-melba-9d53a1.netlify.app/"
+              class="btn btn-launch-button mb-5"
+              target="_blank"
+              >View project</a
+            >
           </div>
         </div>
       </div>
