--- a/index.html
+++ b/index.html
@@ -118,5 +118,30 @@
         </div>
       </div>
     </div>
+
+    <div class="about-header">
+      <h2 class="text-center about-header-font">About Me</h2>
+    </div>
+    <div class="row mb-5">
+      <div class="col-md-6">
+        <div class="about-section">
+          <p class="about-paragraph mb-5">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
+            culpa necessitatibus id ex error labore, aspernatur ratione possimus
+            facilis nostrum, magnam laboriosam esse debitis. Deserunt possimus
+            tempore debitis asperiores quaerat.
+          </p>
+          <a
+            href=""
+            class="btn btn-launch-button about-button mb-4"
+            target="_blank"
+            >See my projects</a
+          >
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img src="/images/portfolio mug 3.png" class="img-fluid mug-2" />
+      </div>
+    </div>
   </body>
 </html>
