Update styling and headers

--- a/index.html
+++ b/index.html
@@ -47,11 +47,16 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container px-0">
+      <div class="project-header">
+        <h2 class="text-center project-header-font">
+          <span class="page-name">Projects</span>
+        </h2>
+      </div>
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h2 class="project-title">Fidelity Landing Page</h2>
+            <h3 class="project-title">Fidelity Landing Page</h2>
             <img
               src="/images/fidelity.png"
               class="img-fluid mb-5"
@@ -65,7 +70,7 @@
             </p>
             <a
               href="https://sage-swan-c8d97c.netlify.app/"
-              class="btn btn-launch-button mb-5"
+              class="btn btn-launch-button mb-4"
               target="_blank"
               >View project</a
             >
@@ -75,7 +80,7 @@
         <!-- <div class="row"> -->
         <div class="col-md-4">
           <div class="project-description">
-            <h2 class="project-title">Javascript Weather App</h2>
+            <h3 class="project-title">Javascript Weather App</h2>
             <img
               src="/images/tejas 2.png"
               class="img-fluid mb-5"
@@ -87,7 +92,7 @@
               incidunt repellendus cupiditate sit illo nemo assumenda dolorem
               sequi esse.
             </p>
-            <a href="" class="btn btn-launch-button mb-5" target="_blank"
+            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-4" target="_blank"
               >View project</a
             >
           </div>
@@ -96,7 +101,7 @@
         <!-- <div class="row"> -->
         <div class="col-md-4">
           <div class="project-description">
-            <h2 class="project-title">Placeholder Landing Page</h2>
+            <h3 class="project-title">Placeholder Landing Page</h2>
             <img
               src="/images/ethereum.png"
               class="img-fluid mb-5"
@@ -110,7 +115,7 @@
             </p>
             <a
               href="https://vocal-melba-9d53a1.netlify.app/"
-              class="btn btn-launch-button mb-5"
+              class="btn btn-launch-button mb-4"
               target="_blank"
               >View project</a
             >
@@ -120,7 +125,9 @@
     </div>
 
     <div class="about-header">
-      <h2 class="text-center about-header-font">About Me</h2>
+      <h2 class="text-center about-header-font">
+        <span class="page-name">About Me</span>
+      </h2>
     </div>
     <div class="row mb-5">
       <div class="col-md-6">
@@ -132,9 +139,8 @@
             tempore debitis asperiores quaerat.
           </p>
           <a
-            href=""
+            href="https://radiant-brigadeiros-ee387d.netlify.app/#projects"
             class="btn btn-launch-button about-button mb-4"
-            target="_blank"
             >See my projects</a
           >
         </div>
