--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             tempore debitis asperiores quaerat.
           </p>
           <a
-            href="https://radiant-brigadeiros-ee387d.netlify.app/#projects"
+            href="https://radiant-brigadeiros-ee387d.netlify.app/#project-header"
             class="btn btn-launch-button about-button mb-4"
             >See my projects</a
           >
