update styling for anchor tags

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="container px-0">
-      <div class="project-header">
+      <div id="project-header">
         <h2 class="text-center project-header-font">
           <span class="page-name">Projects</span>
         </h2>
@@ -124,7 +124,7 @@
       </div>
     </div>
 
-    <div class="about-header">
+    <div id="about-header">
       <h2 class="text-center about-header-font">
         <span class="page-name">About Me</span>
       </h2>
