--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-    <div class="container px-0">
+    <div class="container">
       <div id="project-header">
         <h2 class="text-center project-header-font">
           <span class="page-name">Projects</span>
@@ -59,7 +59,7 @@
             <h3 class="project-title">Fidelity Landing Page</h2>
             <img
               src="/images/fidelity.png"
-              class="img-fluid mb-5"
+              class="img-fluid mb-4"
               id="project-1"
             />
             <p class="mb-4 project-description">
@@ -83,7 +83,7 @@
             <h3 class="project-title">Javascript Weather App</h2>
             <img
               src="/images/tejas 2.png"
-              class="img-fluid mb-5"
+              class="img-fluid mb-4"
               id="project-1"
             />
             <p class="mb-4 project-description">
@@ -104,7 +104,7 @@
             <h3 class="project-title">Placeholder Landing Page</h2>
             <img
               src="/images/ethereum.png"
-              class="img-fluid mb-5"
+              class="img-fluid mb-4"
               id="project-1"
             />
             <p class="mb-4 project-description">
