--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
               id="project-1"
             />
             <p class="mb-4 project-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-              quas beatae totam, neque harum quos eum quam nulla. Vero facilis
-              incidunt repellendus cupiditate sit illo nemo assumenda dolorem
-              sequi esse.
+              Built with HTML, CSS and Javascript
             </p>
             <a
               href="https://sage-swan-c8d97c.netlify.app/"
@@ -87,10 +84,7 @@
               id="project-1"
             />
             <p class="mb-4 project-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-              quas beatae totam, neque harum quos eum quam nulla. Vero facilis
-              incidunt repellendus cupiditate sit illo nemo assumenda dolorem
-              sequi esse.
+              Built with HTML, CSS and Javascript
             </p>
             <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" target="_blank"
               >View project</a
@@ -108,10 +102,7 @@
               id="project-1"
             />
             <p class="mb-4 project-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-              quas beatae totam, neque harum quos eum quam nulla. Vero facilis
-              incidunt repellendus cupiditate sit illo nemo assumenda dolorem
-              sequi esse.
+             Built with HTML, CSS and Javascript
             </p>
             <a
               href="https://vocal-melba-9d53a1.netlify.app/"
