Portfolio expanding, about me adjusted with photo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Fidelity Landing Page</h2>
+            <h3 class="project-title">Fidelity Project</h2>
             <img
               src="/images/fidelity.png"
               class="img-fluid mb-4"
@@ -73,11 +73,9 @@
             >
           </div>
         </div>
-        <!-- </div> -->
-        <!-- <div class="row"> -->
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Javascript Weather App</h2>
+            <h3 class="project-title">Weather App</h2>
             <img
               src="/images/tejas 2.png"
               class="img-fluid mb-4"
@@ -91,11 +89,9 @@
             >
           </div>
         </div>
-        <!-- </div> -->
-        <!-- <div class="row"> -->
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Placeholder Landing Page</h2>
+            <h3 class="project-title">Placeholder App</h2>
             <img
               src="/images/ethereum.png"
               class="img-fluid mb-4"
@@ -112,16 +108,72 @@
             >
           </div>
         </div>
+         <div class="col-md-4">
+          <div class="project-description">
+            <h3 class="project-title">Dictionary App</h2>
+            <img
+              src="/images/coming soon.png"
+              class="img-fluid mb-4"
+              id="project-1"
+            />
+            <p class="mb-4 project-description">
+             Built with HTML, CSS and Javascript
+            </p>
+            <a
+              href="#"
+              class="btn btn-launch-button mb-5"
+              target="_blank"
+              >View project</a
+            >
+          </div>
+        </div>
+         <div class="col-md-4">
+          <div class="project-description">
+            <h3 class="project-title">Translation App</h2>
+            <img
+              src="/images/coming soon.png"
+              class="img-fluid mb-4"
+              id="project-1"
+            />
+            <p class="mb-4 project-description">
+             Built with HTML, CSS and Javascript
+            </p>
+            <a
+              href="#"
+              class="btn btn-launch-button mb-5"
+              target="_blank"
+              >View project</a
+            >
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project-description">
+            <h3 class="project-title">Store Front App</h2>
+            <img
+              src="/images/coming soon.png"
+              class="img-fluid mb-4"
+              id="project-1"
+            />
+            <p class="mb-4 project-description">
+             Built with HTML, CSS and Javascript
+            </p>
+            <a
+              href="#"
+              class="btn btn-launch-button mb-5"
+              target="_blank"
+              >View project</a
+            >
+          </div>
+        </div>
       </div>
     </div>
-
     <div id="about-header">
       <h2 class="text-center about-header-font">
         <span class="page-name">About Me</span>
       </h2>
     </div>
     <div class="row mb-5">
-      <div class="col-md-6">
+      <div class="col-sm-6">
         <div class="about-section">
           <p class="about-paragraph mb-4">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
@@ -136,8 +188,25 @@
           >
         </div>
       </div>
-      <div class="col-md-6">
-        <img src="/images/portfolio mug 3.png" class="img-fluid mug-2" />
+      <div class="col-sm-6">
+        <img src="/images/mug-2.png" class="img-fluid px-5 mug-2" />
+      </div>
+    </div>
+     <div id="epilogue-header">
+      <h2 class="text-center about-header-font">
+        <span class="page-name">Epilogue</span>
+      </h2>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="epilogue-section">
+          <p class="epilogue-paragraph">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
+            culpa necessitatibus id ex error labore, aspernatur ratione possimus
+            facilis nostrum, magnam laboriosam esse debitis. Deserunt possimus
+            tempore debitis asperiores quaerat.
+          </p>
+        </div>
       </div>
     </div>
   </body>
