--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
       </div>
     </div>
     <div class="container">
+      <div class="row">
+      <div class="col text-center">
       <div id="project-header">
-        <h2 class="text-center project-header-font">
-          <span class="page-name">Projects</span>
-        </h2>
+          <h2><span class="page-name  project-header-font">Projects</span></h2>
+        </div>
       </div>
+     </div>
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
@@ -117,7 +119,7 @@
               id="project-1"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS and Javascript
+             Built with HTML, CSS, Javascript and React
             </p>
             <a
               href="#"
@@ -136,7 +138,7 @@
               id="project-1"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS and Javascript
+             Built with HTML, CSS, Javascript and React
             </p>
             <a
               href="#"
@@ -148,14 +150,14 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Store Front App</h2>
+            <h3 class="project-title">Web Store App</h2>
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
               id="project-1"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS and Javascript
+             Built with HTML, CSS, React, and Next.js
             </p>
             <a
               href="#"
@@ -167,15 +169,18 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">    
     <div id="about-header">
-      <h2 class="text-center about-header-font">
-        <span class="page-name">About Me</span>
-      </h2>
+        <h2><span class="page-name about-header-font">About Me</span></h2>
+      </div>
     </div>
-    <div class="row mb-5">
-      <div class="col-sm-6">
+      </div>
+      <div class="row">
+       <div class="col-sm-6">
         <div class="about-section">
-          <p class="about-paragraph mb-4">
+          <p class="about-paragraph mb-5">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
             culpa necessitatibus id ex error labore, aspernatur ratione possimus
             facilis nostrum, magnam laboriosam esse debitis. Deserunt possimus
@@ -189,14 +194,18 @@
         </div>
       </div>
       <div class="col-sm-6">
-        <img src="/images/mug-2.png" class="img-fluid px-5 mug-2" />
-      </div>
+        <img src="/images/mug-2.png" class="img-fluid px-2" />
+      </div>    
     </div>
+  </div>
+     <div class="container">
+      <div class="row">
+    <div class="col text-center">
      <div id="epilogue-header">
-      <h2 class="text-center about-header-font">
-        <span class="page-name">Epilogue</span>
-      </h2>
+        <h2><span class="page-name about-header-font">Epilogue</span></h2>
     </div>
+    </div>
+      </div>
     <div class="row">
       <div class="col">
         <div class="epilogue-section">
@@ -209,5 +218,6 @@
         </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
