--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
       </div>
       <div class="col-sm-6">
-        <img src="/images/mug-2.png" class="img-fluid px-2" />
+        <img src="/images/mug-2.png" class="img-fluid mx-5" />
       </div>    
     </div>
   </div>
