--- a/index.html
+++ b/index.html
@@ -194,10 +194,12 @@
         </div>
       </div>
       <div class="col-sm-6">
+        <div class="center text-center">
         <img src="/images/mug-2.png" class="img-fluid mx-5" />
       </div>    
     </div>
   </div>
+</div>
      <div class="container">
       <div class="row">
     <div class="col text-center">
