Epilogue content update

--- a/index.html
+++ b/index.html
@@ -212,10 +212,7 @@
       <div class="col">
         <div class="epilogue-section">
           <p class="epilogue-paragraph">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
-            culpa necessitatibus id ex error labore, aspernatur ratione possimus
-            facilis nostrum, magnam laboriosam esse debitis. Deserunt possimus
-            tempore debitis asperiores quaerat.
+            Thank-you to my wonderful parents who always believed my capabilities were more than I could imagine. I love you. I'd also like to recognize the KVUE team, family, and plentiful friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
           </p>
         </div>
       </div>
