--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="col">
         <div class="epilogue-section">
           <p class="epilogue-paragraph">
-            Thank-you to my wonderful parents who always believed my capabilities were more than I could imagine. I love you. I'd also like to recognize the KVUE team, family, and plentiful friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
+            Thank-you to my wonderful parents who always believed my capabilities were more than I could imagine. I love you. I'd also like to recognize the KVUE team, family and plentiful friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
           </p>
         </div>
       </div>
