--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               href="#"
               class="btn btn-launch-button mb-5"
               target="_blank"
-              >View project</a
+              >Coming soon</a
             >
           </div>
         </div>
@@ -144,7 +144,7 @@
               href="#"
               class="btn btn-launch-button mb-5"
               target="_blank"
-              >View project</a
+              >Coming soon</a
             >
           </div>
         </div>
@@ -163,7 +163,7 @@
               href="#"
               class="btn btn-launch-button mb-5"
               target="_blank"
-              >View project</a
+              >Coming soon</a
             >
           </div>
         </div>
