--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p class="mb-4 project-description">
               Built with HTML, CSS and Javascript
             </p>
-            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" target="_blank"
+            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" title="Launch weather app" target="_blank"
               >View project</a
             >
           </div>
@@ -212,7 +212,7 @@
       <div class="col">
         <div class="epilogue-section">
           <p class="epilogue-paragraph">
-            Thank-you to my wonderful parents who always believe my capabilities are more than I could imagine. I love you. I'd also like to recognize the KVUE team as well as family and plentiful friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
+            Thank-you to my wonderful parents who always believe my capabilities are more than I could imagine. I love you. I'd also like to recognize the KVUE team as well as plentiful family and friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
           </p>
         </div>
       </div>
