--- a/index.html
+++ b/index.html
@@ -181,10 +181,7 @@
        <div class="col-sm-6">
         <div class="about-section">
           <p class="about-paragraph mb-5">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
-            culpa necessitatibus id ex error labore, aspernatur ratione possimus
-            facilis nostrum, magnam laboriosam esse debitis. Deserunt possimus
-            tempore debitis asperiores quaerat.
+            I like pretending I can sew and take pictures while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high fixing tech toys, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
           </p>
           <a
             href="#project-header"
