--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
     <div class="row">
       <div class="col">
-        <div class="epilogue-section">
+        <div class="epilogue-section px-4">
           <p class="epilogue-paragraph">
             Thank-you to my wonderful parents who always believe my capabilities are more than I can imagine. I love you. I'd also like to recognize the KVUE team as well as plentiful family and friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
           </p>
