Update about columns

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
       </div>
       <div class="row">
-       <div class="col-sm-6">
+       <div class="col-md-6">
         <div class="about-section">
           <p class="about-paragraph mb-5">
             I grew up in North Texas. I've worked in a prison, on a cruise ship, and in tv stations. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing tech toys, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
@@ -190,7 +190,7 @@
           >
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="center text-center">
         <img src="/images/mug-2.png" class="img-fluid mx-5" />
       </div>    
