--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row g-0">
         <div class="col-sm-6">
           <img src="/images/portfolio mug 3.png" class="img-fluid mug" />
         </div>
@@ -46,6 +46,7 @@
           </div>
         </div>
       </div>
+
     </div>
     <div class="container">
       <div class="row">
