Update styling, add contact page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row g-0">
+      <div class="row">
         <div class="col-sm-6">
           <img src="/images/portfolio mug 3.png" class="img-fluid mug" />
         </div>
@@ -46,20 +46,19 @@
           </div>
         </div>
       </div>
-
     </div>
     <div class="container">
       <div class="row">
-      <div class="col text-center">
-      <div id="project-header">
-          <h2><span class="page-name  project-header-font">Projects</span></h2>
+        <div class="col text-center">
+          <div id="project-header">
+            <h2><span class="page-name  project-header-font">Portfolio</span></h2>
         </div>
       </div>
      </div>
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Fidelity Project</h2>
+            <h3 class="project-title">Finance</h2>
             <img
               src="/images/fidelity.png"
               class="img-fluid mb-4"
@@ -78,7 +77,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Weather App</h2>
+            <h3 class="project-title">Weather</h2>
             <img
               src="/images/tejas 2.png"
               class="img-fluid mb-4"
@@ -94,7 +93,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Placeholder App</h2>
+            <h3 class="project-title">Placeholder</h2>
             <img
               src="/images/ethereum.png"
               class="img-fluid mb-4"
@@ -111,28 +110,11 @@
             >
           </div>
         </div>
-         <div class="col-md-4">
+      </div>
+      <div class="row">
+        <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Dictionary App</h2>
-            <img
-              src="/images/coming soon.png"
-              class="img-fluid mb-4"
-              id="project-1"
-            />
-            <p class="mb-4 project-description">
-             Built with HTML, CSS, Javascript and React
-            </p>
-            <a
-              href="#"
-              class="btn btn-launch-button mb-5"
-              target="_blank"
-              >Coming soon</a
-            >
-          </div>
-        </div>
-         <div class="col-md-4">
-          <div class="project-description">
-            <h3 class="project-title">Translation App</h2>
+            <h3 class="project-title">Dictionary</h2>
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -151,7 +133,26 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Web Store App</h2>
+            <h3 class="project-title">Translator</h2>
+            <img
+              src="/images/coming soon.png"
+              class="img-fluid mb-4"
+              id="project-1"
+            />
+            <p class="mb-4 project-description">
+             Built with HTML, CSS, Javascript and React
+            </p>
+            <a
+              href="#"
+              class="btn btn-launch-button mb-5"
+              target="_blank"
+              >Coming soon</a
+            >
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project-description">
+            <h3 class="project-title">Web Store</h2>
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -173,48 +174,65 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">    
-    <div id="about-header">
-        <h2><span class="page-name about-header-font">About Me</span></h2>
-      </div>
-    </div>
+         <div id="about-header">
+          <h2><span class="page-name about-header-font">About</span></h2>
+        </div>
+       </div>
       </div>
       <div class="row">
-       <div class="col-md-6">
+        <div class="col-md-6">
         <div class="about-section">
           <p class="about-paragraph mb-5">
-            I grew up in North Texas. I've worked in a prison, on a cruise ship, and in tv stations. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing tech toys, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
+            I grew up in North Texas. I've worked in a prison, on a cruise ship, and at tv stations. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing tech toys, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
           </p>
           <a
             href="#project-header"
             class="btn btn-launch-button about-button mb-5"
-            >See my projects</a
+            >See my work</a
           >
         </div>
       </div>
-      <div class="col-md-6">
+        <div class="col-md-6">
         <div class="center text-center">
         <img src="/images/mug-2.png" class="img-fluid mx-5" />
       </div>    
     </div>
   </div>
 </div>
-     <div class="container">
+    <div class="container">
       <div class="row">
-    <div class="col text-center">
+        <div class="col text-center">
      <div id="epilogue-header">
         <h2><span class="page-name about-header-font">Epilogue</span></h2>
     </div>
     </div>
       </div>
-    <div class="row">
-      <div class="col">
-        <div class="epilogue-section px-4">
+      <div class="row">
+        <div class="col">
+        <div class="epilogue-section">
           <p class="epilogue-paragraph">
             Thank-you to my wonderful parents who always believe my capabilities are more than I can imagine. I love you. I'd also like to recognize the KVUE team as well as plentiful family and friends who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
           </p>
         </div>
       </div>
     </div>
-  </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">    
+         <div id="about-header">
+          <h2><span class="page-name about-header-font">Contact</span></h2>
+        </div>
+       </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+        <!-- <div class="about-section"> -->
+          <h2>Email</h2>
+          <p><a href="mailto:mlawry95@gmail.com">mlawry95@gmail.com</a></p>          
+        </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
