--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     <title>Meet MML | Front-end Developer | Austin</title>
   </head>
   <body>
+   <div class="container"> 
+    <nav class="d-flex justify-content-between">
+        <img src="" class="" alt=""/>
+        <ul>
+          <li class="active"><a href="/">Home</li></a>
+          <li><a href="#about-header">About</li></a>
+          <li><a href="#project-header">Portfolio</li></a>
+          <li><a href="#contact-header">Contact</li></a>
+          <li><a href="#epilogue-header">Epilogue</li></a>
+        </ul>
+       </nav> 
+      </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -40,8 +52,7 @@
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
           <h2>Front-end Developer || Austin, TX</h2>
           <div class="mt-5">
-            <a href="#" class="btn btn-branding" title="contact MM Lawry"
-              >Contact me</a
+            <a href="#contact-header" class="btn btn-branding" title="contact MM Lawry">Contact me</a
             >
           </div>
         </div>
@@ -51,7 +62,7 @@
       <div class="row">
         <div class="col text-center">
           <div id="project-header">
-            <h2><span class="page-name  project-header-font">Portfolio</span></h2>
+            <h2><span class="page-name project-header-font">Portfolio</span></h2>
         </div>
       </div>
      </div>
@@ -175,7 +186,7 @@
       <div class="row">
         <div class="col text-center">    
          <div id="about-header">
-          <h2><span class="page-name about-header-font">About</span></h2>
+          <h2><span class="page-name about-header-font">About M.M.Lawry</span></h2>
         </div>
        </div>
       </div>
@@ -183,7 +194,7 @@
         <div class="col-md-6">
         <div class="about-section">
           <p class="about-paragraph mb-5">
-            I grew up in North Texas. I've worked in a prison, on a cruise ship, and at tv stations. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing tech toys, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
+            I grew up in North Texas. My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. I've worked in a prison, on a cruise ship, at tv stations and was once voted Production Employee of the Year. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
           </p>
           <a
             href="#project-header"
@@ -220,7 +231,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">    
-         <div id="about-header">
+         <div id="contact-header">
           <h2><span class="page-name about-header-font">Contact</span></h2>
         </div>
        </div>
