Switched epilogue again, more footer edits

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   </head>
   <body>
    <div class="container"> 
-    <nav class="d-flex justify-content-between">
+    <nav class="d-flex justify-content-between fixed-top">
         <img src="" class="" alt=""/>
         <ul>
           <li class="active"><a href="/">Home</li></a>
           <li><a href="#about-header">About</li></a>
           <li><a href="#project-header">Portfolio</li></a>
-          <li><a href="#contact-header">Contact</li></a>
           <li><a href="#epilogue-header">Epilogue</li></a>
+          <li><a href="#contact-header">Contact</li></a>
         </ul>
        </nav> 
       </div>
@@ -210,22 +210,6 @@
       </div>
     </div>
   </div>
- <div class="container">
-      <div class="row">
-        <div class="col text-center">    
-         <div id="contact-header">
-          <h2><span class="page-name about-header-font">Contact</span></h2>
-        </div>
-       </div>
-      </div>
-      <div class="row">
-        <div class="col text-center">
-          <h2>Email</h2>
-          <p><a href="mailto:mlawry95@gmail.com">mlawry95@gmail.com</a></p>          
-        </div>
-        </div>
-      </div>
-    </div>
     <div class="container">
       <div class="row">
         <div class="col text-center">
@@ -243,6 +227,31 @@
         </div>
       </div>
     </div>
+    </div>
+ <div class="container">
+      <div class="row">
+        <div class="col text-center">    
+         <div id="contact-header">
+          <h2><span class="page-name about-header-font">Contact</span></h2>
+        </div>
+       </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          <h2>Email</h2>
+        </div>
+      </div>
+      <footer>
+      <div class="d-flex justify-content-center">
+        <a href="mailto:mlawry95@gmail.com" class="email-link">mlawry95@gmail.com</a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href=""><i class="fa-brands fa-github"></i><a>
+      </div>
+    </footer>
+        </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
