--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Finance</h2>
+              <div class="justify-content-evenly">
             <img
               src="/images/fidelity.png"
               class="img-fluid mb-4"
@@ -86,6 +87,7 @@
             >
           </div>
         </div>
+       </div> 
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Weather</h2>
@@ -247,7 +249,7 @@
         <a href="mailto:mlawry95@gmail.com" class="email-link">mlawry95@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="fa-brands fa-github"></i><a>
+        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github"></i><a>
       </div>
     </footer>
         </div>
