--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     <title>Meet MML | Front-end Developer | Austin</title>
   </head>
   <body>
-   <div class="container"> 
+   <div class="container">
     <nav class="d-flex justify-content-between fixed-top">
         <img src="" class="" alt=""/>
         <ul>
           <li class="active"><a href="/">Home</li></a>
           <li><a href="#about-header">About</li></a>
           <li><a href="#project-header">Portfolio</li></a>
-          <li><a href="#epilogue-header">Epilogue</li></a>
           <li><a href="#contact-header">Contact</li></a>
+          <li><a href="#epilogue-header">Epilogue</li></a>
         </ul>
        </nav> 
       </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Placeholder</h2>
+            <h3 class="project-title">Gambling</h2>
             <img
               src="/images/ethereum.png"
               class="img-fluid mb-4"
@@ -186,7 +186,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col text-center">    
+        <div class="col text-center">
          <div id="about-header">
           <h2><span class="page-name about-header-font">About M.M.Lawry</span></h2>
         </div>
@@ -196,7 +196,7 @@
         <div class="col-md-6">
         <div class="about-section">
           <p class="about-paragraph mb-5">
-            I grew up in North Texas. My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. I've worked in a prison, on a cruise ship, at tv stations and was once voted Production Employee of the Year. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff, most especially personal finance tidbits to quench my minimalist thirst.
+            I grew up in North Texas. My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. I've worked in a prison, on a cruise ship, at tv stations and was once voted Production Employee of the Year. I like pretending I can sew and take photos while my machine and camera collect dust. I relax by watching Hallmark romances. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff...current obsession, personal finance tidbits to quench my minimalist thirst.
           </p>
           <a
             href="#project-header"
