Made website SEO friendly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="M.M. Lawry is a front-end developer based in Austin, TX" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,11 +35,11 @@
     <nav class="d-flex justify-content-between fixed-top">
         <img src="" class="" alt=""/>
         <ul>
-          <li class="active"><a href="/">Home</li></a>
-          <li><a href="#about-header">About</li></a>
-          <li><a href="#project-header">Portfolio</li></a>
-          <li><a href="#contact-header">Contact</li></a>
-          <li><a href="#epilogue-header">Epilogue</li></a>
+          <li class="active"><a href="/" title="Homepage">Home</li></a>
+          <li><a href="#about-header" title="About M.M. Lawry">About</li></a>
+          <li><a href="#project-header" title="M.M. Lawry's projects">Portfolio</li></a>
+          <li><a href="#contact-header" title="Contact M.M. Lawry">Contact</li></a>
+          <li><a href="#epilogue-header" title="M.M. Lawry special message">Epilogue</li></a>
         </ul>
        </nav> 
       </div>
@@ -52,7 +52,7 @@
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
           <h2>Front-end Developer || Austin, TX</h2>
           <div class="mt-5">
-            <a href="#contact-header" class="btn btn-branding" title="contact MM Lawry">Contact me</a
+            <a href="#contact-header" class="btn btn-branding" title="Contact M.M. Lawry">Contact me</a
             >
           </div>
         </div>
@@ -75,6 +75,8 @@
               src="/images/fidelity.png"
               class="img-fluid mb-4"
               id="project-1"
+              alt="Finance project"
+              title="Fidelity facts"
             />
             <p class="mb-4 project-description">
               Built with HTML, CSS and Javascript
@@ -95,9 +97,11 @@
               src="/images/tejas 2.png"
               class="img-fluid mb-4"
               id="project-1"
+              alt="Weather project"
+              title="Weather forecast"
             />
             <p class="mb-4 project-description">
-              Built with HTML, CSS and Javascript
+              Built with HTML, CSS and Javascript - Not mobile friendly
             </p>
             <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" title="Launch weather app" target="_blank"
               >View project</a
@@ -111,9 +115,11 @@
               src="/images/ethereum.png"
               class="img-fluid mb-4"
               id="project-1"
+              alt="Gambling project"
+              title="Crypto coin Ethereum"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS and Javascript
+             HTML, CSS and Javascript
             </p>
             <a
               href="https://vocal-melba-9d53a1.netlify.app/"
@@ -132,9 +138,11 @@
               src="/images/coming soon.png"
               class="img-fluid mb-4"
               id="project-1"
+              alt="Dictionary project"
+              title="Dictionary"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS, Javascript and React
+             HTML, CSS, Javascript and React
             </p>
             <a
               href="#"
@@ -146,14 +154,16 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Translator</h2>
+            <h3 class="project-title">Weather 2</h2>
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
               id="project-1"
+              alt="Weather 2 project"
+              title="Weather forecast"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS, Javascript and React
+             HTML, CSS, Javascript and React
             </p>
             <a
               href="#"
@@ -170,9 +180,11 @@
               src="/images/coming soon.png"
               class="img-fluid mb-4"
               id="project-1"
+              alt="Web Store project"
+              title="E-commerce site"
             />
             <p class="mb-4 project-description">
-             Built with HTML, CSS, React, and Next.js
+             HTML, CSS, React, and Next.js
             </p>
             <a
               href="#"
@@ -246,10 +258,10 @@
       </div>
       <footer>
       <div class="d-flex justify-content-center">
-        <a href="mailto:mlawry95@gmail.com" class="email-link">mlawry95@gmail.com</a>
+        <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email M.M. Lawry">mlawry95@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github"></i><a>
+        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i><a>
       </div>
     </footer>
         </div>
