--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <a
               href="https://sage-swan-c8d97c.netlify.app/"
               class="btn btn-launch-button mb-5"
+              title="Launch Fidelity page"
               target="_blank"
               >View project</a
             >
@@ -124,6 +125,7 @@
             <a
               href="https://vocal-melba-9d53a1.netlify.app/"
               class="btn btn-launch-button mb-5"
+              title="Launch Ethereum page"
               target="_blank"
               >View project</a
             >
@@ -147,6 +149,7 @@
             <a
               href="#"
               class="btn btn-launch-button mb-5"
+              title="Launch dictionary app"
               target="_blank"
               >Coming soon</a
             >
@@ -168,6 +171,7 @@
             <a
               href="#"
               class="btn btn-launch-button mb-5"
+              title="Launch weather app"
               target="_blank"
               >Coming soon</a
             >
@@ -189,6 +193,7 @@
             <a
               href="#"
               class="btn btn-launch-button mb-5"
+              title="Launch store-front"
               target="_blank"
               >Coming soon</a
             >
@@ -212,6 +217,7 @@
           </p>
           <a
             href="#project-header"
+            title="View my portfolio"
             class="btn btn-launch-button about-button mb-5"
             >See my work</a
           >
