--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email M.M. Lawry">mlawry95@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i><a>
+        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i></a>
       </div>
     </footer>
         </div>
