Updated coming soon links

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
              HTML, CSS, Javascript and React
             </p>
             <a
-              href="#"
+              href="https://clinquant-khapse-d0c0d8.netlify.app/"
               class="btn btn-launch-button mb-5"
               title="Launch dictionary app"
               target="_blank"
@@ -169,7 +169,7 @@
              HTML, CSS, Javascript and React
             </p>
             <a
-              href="#"
+              href="https://clinquant-khapse-d0c0d8.netlify.app/"
               class="btn btn-launch-button mb-5"
               title="Launch weather app"
               target="_blank"
@@ -191,7 +191,7 @@
              HTML, CSS, React, and Next.js
             </p>
             <a
-              href="#"
+              href="https://clinquant-khapse-d0c0d8.netlify.app/"
               class="btn btn-launch-button mb-5"
               title="Launch store-front"
               target="_blank"
