Made project links clickable

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <div class="project-description">
             <h3 class="project-title">Finance</h2>
               <div class="justify-content-evenly">
+                <a href="https://sage-swan-c8d97c.netlify.app/">
             <img
               src="/images/fidelity.png"
               class="img-fluid mb-4"
@@ -78,6 +79,7 @@
               alt="Finance project"
               title="Fidelity facts"
             />
+            </a>
             <p class="mb-4 project-description">
               Built with HTML, CSS and Javascript
             </p>
@@ -94,6 +96,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Weather</h2>
+            <a href="https://prismatic-cascaron-e85dc5.netlify.app/">  
             <img
               src="/images/tejas 2.png"
               class="img-fluid mb-4"
@@ -101,6 +104,7 @@
               alt="Weather project"
               title="Weather forecast"
             />
+            </a>
             <p class="mb-4 project-description">
               Built with HTML, CSS and Javascript - Not mobile friendly
             </p>
@@ -112,6 +116,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Gambling</h2>
+            <a href="https://vocal-melba-9d53a1.netlify.app/">
             <img
               src="/images/ethereum.png"
               class="img-fluid mb-4"
@@ -119,6 +124,7 @@
               alt="Gambling project"
               title="Crypto coin Ethereum"
             />
+             </a>
             <p class="mb-4 project-description">
              HTML, CSS and Javascript
             </p>
@@ -136,6 +142,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Dictionary</h2>
+            <a href="https://clinquant-khapse-d0c0d8.netlify.app/">
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -143,6 +150,7 @@
               alt="Dictionary project"
               title="Dictionary"
             />
+            </a>
             <p class="mb-4 project-description">
              HTML, CSS, Javascript and React
             </p>
@@ -158,6 +166,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Weather 2</h2>
+            <a href="https://clinquant-khapse-d0c0d8.netlify.app/">
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -165,6 +174,7 @@
               alt="Weather 2 project"
               title="Weather forecast"
             />
+            </a>
             <p class="mb-4 project-description">
              HTML, CSS, Javascript and React
             </p>
@@ -180,6 +190,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Web Store</h2>
+            <a href="https://clinquant-khapse-d0c0d8.netlify.app/">
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -187,6 +198,7 @@
               alt="Web Store project"
               title="E-commerce site"
             />
+            </a>
             <p class="mb-4 project-description">
              HTML, CSS, React, and Next.js
             </p>
